# Burger

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  udo netstat -tulpn | grep 590
.devcontainer/: devcontainer.json
.devcontainer/PC/: devcontainer.json
.devcontainer/edge/: devcontainer.json
Firmware/STMF303RE_control/: .utility.hpp.swp  EncoderPoseEstimator.cpp  EncoderPoseEstimator.hpp  ISR.hpp  MotorDriver.cpp  MotorDriver.h  PID.h  STM32FreeRTOSConfig_extra.h  control.hpp  encoder.cpp  serialReciveTask.hpp
Log/rosbag2_2026_03_30-19_08_52/: metadata.yaml
STMF303RE_control/: IMU.hpp  ISR.cpp  PID.cpp  STMF303RE_control.ino  Task.hpp  control_config.h  encoder.h  freertos_config_tasks.h  math_function.h  odometry.hpp  odometry_class.cpp  odometry_class.hpp  state.hpp  utility.hpp
bounding_box_3d_data/boxes/: boxes_0000000.csv  boxes_0000001.csv  boxes_0000002.csv  boxes_0000003.csv  boxes_0000004.csv  boxes_0000005.csv  boxes_0000006.csv  boxes_0000007.csv  boxes_0000008.csv  boxes_0000009.csv  boxes_0000010.csv  boxes_0000011.csv  boxes_0000012.csv  boxes_0000013.csv  boxes_0000014.csv  boxes_0000015.csv  boxes_0000016.csv  boxes_0000017.csv  boxes_0000018.csv  boxes_0000019.csv  boxes_0000020.csv  boxes_0000021.csv  boxes_0000022.csv  boxes_0000023.csv  boxes_0000024.csv  boxes_0000025.csv  boxes_0000026.csv  boxes_0000027.csv  boxes_0000028.csv  boxes_0000029.csv  boxes_0000030.csv  boxes_0000031.csv  boxes_0000032.csv  boxes_0000033.csv  boxes_0000034.csv  boxes_0000035.csv  boxes_0000036.csv  boxes_0000037.csv  boxes_0000038.csv  boxes_0000039.csv  (+4 more)
bounding_box_full_2d_data/boxes/: boxes_0000000.csv
bounding_box_visible_2d_data/boxes/: boxes_0000000.csv
config/: params.yaml
daemon/: start_robot.sh
docker/: docker-compose.yml
docker/PC/: Dockerfile  docker-compose.yml
docker/edge/: Dockerfile
src/burger_bring_up/: CMakeLists.txt  package.xml
src/burger_bring_up/launch/: becon_cheese_burger_launch.py  burger_launch.py  visualization.launch.py
src/burghy_gui_pkg/: package.xml  setup.cfg  setup.py
src/burghy_gui_pkg/burghy_gui_pkg/: burghy_gui_node.py
src/depth_decompressor/: CMakeLists.txt  package.xml
src/depth_decompressor/src/: depth_decompressor_node.cpp
src/ekf/: CMakeLists.txt  package.xml
src/ekf/src/: ekf_node.cpp
src/image_decompressor/: CMakeLists.txt  package.xml
src/image_decompressor/src/: decompress_node.cpp
src/install/joy_teleop_twist_ref/lib/joy_teleop_twist_ref/: joy_vel_ref
src/install/joy_teleop_twist_ref/share/joy_teleop_twist_ref/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/joy_teleop_twist_ref/share/joy_teleop_twist_ref/cmake/: joy_teleop_twist_refConfig.cmake
src/install/lidar_driver/lib/lidar_driver/: lidar_driver
src/install/lidar_driver/share/ament_index/resource_index/parent_prefix_path/: lidar_driver
src/install/lidar_driver/share/lidar_driver/: local_setup.sh  package.sh
src/install/stm32_nucleo_f303re_driver/include/stm32_nucleo_f303re_driver/: parsing_types.hpp
src/install/stm32_nucleo_f303re_driver/include/stm32_nucleo_f303re_driver/stm32_nucleo_f303re_driver/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  wheel_pwm.h  (+1 more)
src/install/stm32_nucleo_f303re_driver/lib/stm32_nucleo_f303re_driver/: stm_driver
src/install/stm32_nucleo_f303re_driver/share/stm32_nucleo_f303re_driver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/stm32_nucleo_f303re_driver/share/stm32_nucleo_f303re_driver/cmake/: export_stm32_nucleo_f303re_driver__rosidl_generator_cExport.cmake  export_stm32_nucleo_f303re_driver__rosidl_typesupport_fastrtps_cExport.cmake  export_stm32_nucleo_f303re_driver__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  stm32_nucleo_f303re_driverConfig.cmake  stm32_nucleo_f303re_driver__rosidl_typesupport_cExport-noconfig.cmake  stm32_nucleo_f303re_driver__rosidl_typesupport_cExport.cmake  stm32_nucleo_f303re_driver__rosidl_typesupport_introspection_cExport-noconfig.cmake  stm32_nucleo_f303re_driver__rosidl_typesupport_introspection_cppExport-noconfig.cmake
src/install/stm32_nucleo_f303re_driver/share/stm32_nucleo_f303re_driver/msg/: WheelPwm.msg
src/joy_service_node/: CMakeLists.txt  package.xml
src/joy_service_node/src/: joy_service_node.cpp
src/joy_teleop_twist_ref/: CMakeLists.txt
src/joy_teleop_twist_ref/src/: joy_vel_ref.cpp
src/lidar_driver/: CMakeLists.txt
src/lidar_driver/include/lidar_driver/: lipkg.h  scan_data.h
src/lidar_driver/src/: lipkg.cpp  main.cpp
src/log/: latest_build
src/module3_driver/: CMakeLists.txt  package.xml
src/module3_driver/src/: module3.cpp
src/ollama/: package.xml  setup.cfg  setup.py
src/ollama/ollama/: ollama_pubsub.py
src/ping_pong/: CMakeLists.txt  package.xml
src/ping_pong/src/: ping_publisher.cpp  pong_subscriber.cpp
src/pipe_tts/: package.xml  setup.cfg  setup.py
src/pipe_tts/pipe_tts/: voice_tts.py
src/robot_descriptor/: CMakeLists.txt  package.xml
src/robot_descriptor/config/: config_sim.yaml  gz_bridge.yaml
src/robot_descriptor/descriptor/: camera.xacro  camera_frames.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/robot_descriptor/launch/: sim.py  simulation.launch.py
src/robot_descriptor/meshes/: IntelRealsense_D435i.stl  camera3.stl  d435i.stl  lidar.stl  wheel.stl
src/robot_descriptor/urdf/: burger.urdf  burger_gazebo.urdf
src/robot_descriptor/worlds/: Nutt.world
src/stm32_nucleo_f303re_driver/: CMakeLists.txt  package.xml
src/stm32_nucleo_f303re_driver/config/: params.yaml
src/stm32_nucleo_f303re_driver/include/stm32_nucleo_f303re_driver/: parsing_types.hpp
src/stm32_nucleo_f303re_driver/launch/: becon_cheese_burger_launch.py  burger_launch.py  cheese_burger_launch.py
src/stm32_nucleo_f303re_driver/msg/: Wheelspeed.msg
src/stm32_nucleo_f303re_driver/src/: .stm_driver.cpp.swp  stm_driver.cpp
tools/: gui.demo.py  imu_analize.py
(+12 files in other folders)
