<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>stm32_nucleo_f303re_driver</name>
  <version>0.1.0</version>

  <description>
    ROS 2 serial driver for STM32 Nucleo F303RE.
  </description>

  <maintainer email="mcf.donato@gmail.com">Emanuele Donato</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>builtin_interfaces</depend>

  <!-- custom message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- REQUIRED for packages that install .msg -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
